--- a/12交易记录_.html
+++ b/12交易记录_.html
@@ -15,8 +15,9 @@
 
     <style>
         .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
-    border-right: 1px solid #efeff4;
-}
+            border-right: 1px solid #efeff4;
+        }
+
         .mui-slider {
             position: relative;
             z-index: 1;
@@ -56,9 +57,13 @@
             transform: scaleY(.5);
             background-color: #c8c7cc;
         }
-        .mui-slider-group {
-            
-        }
+.mui-slider-group {
+    height: 100%!important;
+}
+        .mui-control-content {
+    background-color: white;
+    min-height: 50%!important;
+}
     </style>
     <!-- 带返回与头部的header -->
     <header class="mui-bar mui-bar-nav header-nav bd_1">
@@ -87,51 +92,51 @@
             <div class="mui-slider-group">
                 <div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
                     <div id="scroll1" class="mui-scroll-wrapper">
-                    <div class="mui-scroll">
-                    <ul class="cj_list mui-table-view mui-table-view-chevron">
-                        <li class="mui-table-view-cell mui-media jiaoyijilu">
-                            <div class="item_lf">
-                                <img src="./img/cz.png" alt="">
-                                <div>
-                                    <span>充值-生日管家</span>
-                                    <span>2017-1-12 12:18:18</span>
-                                </div>
-                            </div>
-                            <span class="item_rt">+200</span>
-                        </li>
-                        <li class="mui-table-view-cell mui-media jiaoyijilu">
-                            <div class="item_lf">
-                                <img src="./img/xf.png" alt="">
-                                <div>
-                                    <span>提现-斗鱼直播</span>
-                                    <span>2017-1-12 12:18:18</span>
-                                </div>
-                            </div>
-                            <span class="item_rt">-200</span>
-                        </li>
-                        <li class="mui-table-view-cell mui-media jiaoyijilu">
-                            <div class="item_lf">
-                                <img src="./img/xf.png" alt="">
-                                <div>
-                                    <span>提现-斗鱼直播</span>
-                                    <span>2017-1-12 12:18:18</span>
-                                </div>
-                            </div>
-                            <span class="item_rt">-200</span>
-                        </li>
-                        <li class="mui-table-view-cell mui-media jiaoyijilu">
-                            <div class="item_lf">
-                                <img src="./img/tk.png" alt="">
-                                <div>
-                                    <span>退款</span>
-                                    <span>2017-1-12 12:18:18</span>
-                                </div>
-                            </div>
-                            <span class="item_rt">+200</span>
-                        </li>
+                        <div class="mui-scroll">
+                            <ul class="cj_list mui-table-view mui-table-view-chevron">
+                                <li class="mui-table-view-cell mui-media jiaoyijilu">
+                                    <div class="item_lf">
+                                        <img src="./img/cz.png" alt="">
+                                        <div>
+                                            <span>充值-生日管家</span>
+                                            <span>2017-1-12 12:18:18</span>
+                                        </div>
+                                    </div>
+                                    <span class="item_rt">+200</span>
+                                </li>
+                                <li class="mui-table-view-cell mui-media jiaoyijilu">
+                                    <div class="item_lf">
+                                        <img src="./img/xf.png" alt="">
+                                        <div>
+                                            <span>提现-斗鱼直播</span>
+                                            <span>2017-1-12 12:18:18</span>
+                                        </div>
+                                    </div>
+                                    <span class="item_rt">-200</span>
+                                </li>
+                                <li class="mui-table-view-cell mui-media jiaoyijilu">
+                                    <div class="item_lf">
+                                        <img src="./img/xf.png" alt="">
+                                        <div>
+                                            <span>提现-斗鱼直播</span>
+                                            <span>2017-1-12 12:18:18</span>
+                                        </div>
+                                    </div>
+                                    <span class="item_rt">-200</span>
+                                </li>
+                                <li class="mui-table-view-cell mui-media jiaoyijilu">
+                                    <div class="item_lf">
+                                        <img src="./img/tk.png" alt="">
+                                        <div>
+                                            <span>退款</span>
+                                            <span>2017-1-12 12:18:18</span>
+                                        </div>
+                                    </div>
+                                    <span class="item_rt">+200</span>
+                                </li>
 
-                    </ul>
-                    </div>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div id="item2mobile" class="mui-slider-item mui-control-content">
