--- a/转帐汇款_银行卡输入金额.html
+++ b/转帐汇款_银行卡输入金额.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="fill-30 bg_body_gray"></div>
-                <ul class="remittance mui-table-view mui-table-view-chevron">
+                <ul class="remittance_bank mui-table-view mui-table-view-chevron">
                     <li class="mui-table-view-cell mui-media ">
                         <span>收款方姓名</span>
                         <span>张婉奇</span>
